--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -1,14 +1,19 @@
+name: OWASP ZAP Integration with GitHub Actions
+
 on: [push]
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the webapplication
+    name: OWASP ZAP SCAN OF A VULNERABLE WEB SITE
     steps:
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.7.0
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: master
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.6.1
+        with:
           docker_name: 'owasp/zap2docker-stable'
           target: 'http://testphp.vulnweb.com/'
           rules_file_name: '.zap/rules.tsv'
